--- a/examapp/templates/admin.html
+++ b/examapp/templates/admin.html
@@ -3,107 +3,125 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Admin</title>
+        <meta charset="UTF-8" />
+        <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+        <title>Admin</title>
 
-    <!-- Google Fonts - Poppins -->
-    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
+        <!-- Google Fonts - Poppins -->
+        <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;600&display=swap" rel="stylesheet" />
 
-    <!-- Bootstrap CSS -->
-    <link rel="stylesheet" href="{% static 'examapp/css/bootstrap.min.css' %}" />
+        <!-- Bootstrap CSS -->
+        <link rel="stylesheet" href="{% static 'examapp/css/bootstrap.min.css' %}" />
 
-    <!-- Bootstrap Icons -->
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'examapp/css/adminexam.css' %}">
+        <!-- Bootstrap Icons -->
+        <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
+        <link rel="stylesheet" href="{% static 'examapp/css/onlineadmin.css' %}">
 
 </head>
 
 <body>
-    <!-- Top Navbar -->
-    <nav class="navbar navbar-expand-lg bg-info fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white" href="/examapp/admin/101"> Exam Online </a>
-            <button class="navbar-toggler bg-light" type="button" data-bs-toggle="offcanvas"
-                data-bs-target="#adminSidebarOffcanvas" aria-controls="adminSidebarOffcanvas">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-        </div>
-    </nav>
+        <!-- Top Navbar -->
+        <nav class="navbar navbar-expand-lg bg-info fixed-top">
+                <div class="container-fluid">
+                        <a class="navbar-brand text-white" href="/examapp/admin/101"> Exam Online </a>
+                        <button class="navbar-toggler bg-light" type="button" data-bs-toggle="offcanvas"
+                                data-bs-target="#adminSidebarOffcanvas" aria-controls="adminSidebarOffcanvas">
+                                <span class="navbar-toggler-icon"></span>
+                        </button>
+                </div>
+        </nav>
 
-    <!-- Sidebar for large screens -->
-    <div class="sidebar d-none d-lg-block">
-        <ul class="navbar-nav flex-column">
-            <li class="nav-item active"><a class="nav-link" href="/examapp/admin/101"><i class="bi bi-house-fill"></i>
-                    Admin</a></li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/viewusers"><i class="bi bi-people-fill"></i>
-                    Approved Users</a></li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/allresults"><i class="bi bi-bar-chart-fill"></i> All
-                    Results</a></li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/courses"><i class="bi bi-journal-bookmark-fill"></i>
-                    Courses</a></li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/subjects"><i class="bi bi-book-fill"></i>
-                    Subjects</a></li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/paper"><i class="bi bi-file-earmark-text-fill"></i>
-                    Papers</a></li>
-            <li class="nav-item dropdown">
-                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><i
-                        class="bi bi-plus-circle-fill"></i> Add Data</a>
-                <ul class="dropdown-menu">
-                    <li><a class="dropdown-item" href="/examapp/addcourse"><i class="bi bi-journal-plus"></i> Add
-                            Course</a></li>
-                    <li><a class="dropdown-item" href="/examapp/addsubject"><i class="bi bi-journal-plus"></i> Add
-                            Subject</a></li>
-                    <li><a class="dropdown-item" href="/examapp/addpaper"><i class="bi bi-journal-plus"></i> Add
-                            Paper</a></li>
+        <!-- Sidebar for large screens -->
+        <div class="sidebar d-none d-lg-block">
+                <ul class="navbar-nav flex-column">
+                        <li class="nav-item active"><a class="nav-link" href="/examapp/admin/101"><i
+                                                class="bi bi-house-fill"></i>
+                                        Admin</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/viewusers"><i
+                                                class="bi bi-people-fill"></i>
+                                        Approved Users</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/allresults"><i
+                                                class="bi bi-bar-chart-fill"></i> All
+                                        Results</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/courses"><i
+                                                class="bi bi-journal-bookmark-fill"></i>
+                                        Courses</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/subjects"><i
+                                                class="bi bi-book-fill"></i>
+                                        Subjects</a></li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/paper"><i
+                                                class="bi bi-file-earmark-text-fill"></i>
+                                        Papers</a></li>
+                        <li class="nav-item dropdown">
+                                <a class="nav-link dropdown-toggle" data-bs-toggle="dropdown" href="#"><i
+                                                class="bi bi-plus-circle-fill"></i> Add Data</a>
+                                <ul class="dropdown-menu">
+                                        <li><a class="dropdown-item" href="/examapp/addcourse"><i
+                                                                class="bi bi-journal-plus"></i> Add
+                                                        Course</a></li>
+                                        <li><a class="dropdown-item" href="/examapp/addsubject"><i
+                                                                class="bi bi-journal-plus"></i> Add
+                                                        Subject</a></li>
+                                        <li><a class="dropdown-item" href="/examapp/addpaper"><i
+                                                                class="bi bi-journal-plus"></i> Add
+                                                        Paper</a></li>
+                                </ul>
+                        </li>
+                        <li class="nav-item"><a class="nav-link" href="/examapp/home"><i
+                                                class="bi bi-box-arrow-right"></i>
+                                        Logout</a></li>
                 </ul>
-            </li>
-            <li class="nav-item"><a class="nav-link" href="/examapp/home"><i class="bi bi-box-arrow-right"></i>
-                    Logout</a></li>
-        </ul>
-    </div>
-
-    <!-- Offcanvas sidebar for small screens -->
-    <div class="offcanvas offcanvas-start" tabindex="-1" id="adminSidebarOffcanvas">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title"><i class="bi bi-list"></i> Admin Menu</h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
         </div>
-        <div class="offcanvas-body">
-            <ul class="navbar-nav flex-column">
-                <li class="nav-item"><a class="nav-link" href="/examapp/admin/101"><i class="bi bi-house-fill"></i>
-                        Admin</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/viewusers"><i class="bi bi-people-fill"></i>
-                        Approved Users</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/allresults"><i class="bi bi-bar-chart-fill"></i>
-                        All Results</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/courses"><i
-                            class="bi bi-journal-bookmark-fill"></i> Courses</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/subjects"><i class="bi bi-book-fill"></i>
-                        Subjects</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/paper"><i
-                            class="bi bi-file-earmark-text-fill"></i> Papers</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/addcourse"><i class="bi bi-journal-plus"></i>
-                        Add Course</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/addsubject"><i class="bi bi-journal-plus"></i>
-                        Add Subject</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/addpaper"><i class="bi bi-journal-plus"></i> Add
-                        Paper</a></li>
-                <li class="nav-item"><a class="nav-link" href="/examapp/home"><i class="bi bi-box-arrow-right"></i>
-                        Logout</a></li>
-            </ul>
-        </div>
-    </div>
 
-    <!-- Admin Content -->
-    <div class="admindata container-fluid">
-        <div class="home-container">
-            <h1>Welcome to Admin</h1>
+        <!-- Offcanvas sidebar for small screens -->
+        <div class="offcanvas offcanvas-start" tabindex="-1" id="adminSidebarOffcanvas">
+                <div class="offcanvas-header">
+                        <h5 class="offcanvas-title"><i class="bi bi-list"></i> Admin Menu</h5>
+                        <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+                </div>
+                <div class="offcanvas-body">
+                        <ul class="navbar-nav flex-column">
+                                <li class="nav-item"><a class="nav-link" href="/examapp/admin/101"><i
+                                                        class="bi bi-house-fill"></i>
+                                                Admin</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/viewusers"><i
+                                                        class="bi bi-people-fill"></i>
+                                                Approved Users</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/allresults"><i
+                                                        class="bi bi-bar-chart-fill"></i>
+                                                All Results</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/courses"><i
+                                                        class="bi bi-journal-bookmark-fill"></i> Courses</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/subjects"><i
+                                                        class="bi bi-book-fill"></i>
+                                                Subjects</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/paper"><i
+                                                        class="bi bi-file-earmark-text-fill"></i> Papers</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/addcourse"><i
+                                                        class="bi bi-journal-plus"></i>
+                                                Add Course</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/addsubject"><i
+                                                        class="bi bi-journal-plus"></i>
+                                                Add Subject</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/addpaper"><i
+                                                        class="bi bi-journal-plus"></i> Add
+                                                Paper</a></li>
+                                <li class="nav-item"><a class="nav-link" href="/examapp/home"><i
+                                                        class="bi bi-box-arrow-right"></i>
+                                                Logout</a></li>
+                        </ul>
+                </div>
         </div>
-    </div>
 
-    <!-- Bootstrap Bundle JS -->
-    <script src="{% static 'examapp/js/bootstrap.bundle.min.js' %}"></script>
+        <!-- Admin Content -->
+        <div class="admindata container-fluid">
+                <div class="home-container">
+                        <h1>Welcome to Admin</h1>
+                </div>
+        </div>
+
+        <!-- Bootstrap Bundle JS -->
+        <script src="{% static 'examapp/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
