--- a/examapp/templates/adminlogin.html
+++ b/examapp/templates/adminlogin.html
@@ -7,7 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>login</title>
     <link rel="stylesheet" href="{% static 'examapp/css/bootstrap.min.css'%}">
-    <link rel="stylesheet" href="{% static 'examapp/css/onlineexam.css'%}">
+    <link rel="stylesheet" href="{% static 'examapp/css/onlineuser.css'%}">
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
