--- a/examapp/templates/course.html
+++ b/examapp/templates/course.html
@@ -15,7 +15,7 @@
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'examapp/css/adminexam.css' %}">
+    <link rel="stylesheet" href="{% static 'examapp/css/adminonline.css' %}">
     <style>
         .btn-none {
             background: none;
@@ -125,28 +125,28 @@
                 /* text-align: center; */
             }
         }
+
         .form p {
-    margin-bottom: 1rem;
-}
+            margin-bottom: 1rem;
+        }
 
-label {
-    font-weight: 500;
-    margin-bottom: 0.25rem;
-}
+        label {
+            font-weight: 500;
+            margin-bottom: 0.25rem;
+        }
 
 
-input[type="text"],
-input[type="email"],
-input[type="password"],
-input[type="date"],
-input[type="number"],
-select {
-    width: 100%;
-    padding: 0.5rem;
-    border-radius: 0.5rem;
-    border: 1px solid #ced4da;
-}
-    
+        input[type="text"],
+        input[type="email"],
+        input[type="password"],
+        input[type="date"],
+        input[type="number"],
+        select {
+            width: 100%;
+            padding: 0.5rem;
+            border-radius: 0.5rem;
+            border: 1px solid #ced4da;
+        }
     </style>
 </head>
 
