--- a/examapp/templates/resultsave.html
+++ b/examapp/templates/resultsave.html
@@ -1,145 +1,152 @@
-
-
-
 {% load static %}
 <!DOCTYPE html>
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>User Page</title>
-    <link rel="stylesheet" href="{% static 'examapp/css/bootstrap.min.css' %}">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
-    <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>User Page</title>
+  <link rel="stylesheet" href="{% static 'examapp/css/bootstrap.min.css' %}">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
 
-    <style>
-        body {
-            background-color: #f8f9fa;
-            font-family: 'Poppins', sans-serif;
-        }
+  <style>
+    body {
+      background-color: #f8f9fa;
+      font-family: 'Poppins', sans-serif;
+    }
 
-        .fade-in {
-            animation: fadeIn 0.6s ease-in-out;
-        }
+    .fade-in {
+      animation: fadeIn 0.6s ease-in-out;
+    }
 
-        @keyframes fadeIn {
-            from {
-                opacity: 0;
-                transform: translateY(10px);
-            }
+    @keyframes fadeIn {
+      from {
+        opacity: 0;
+        transform: translateY(10px);
+      }
 
-            to {
-                opacity: 1;
-                transform: translateY(0);
-            }
-        }
+      to {
+        opacity: 1;
+        transform: translateY(0);
+      }
+    }
 
-        .btn-info {
-            transition: transform 0.3s ease, background-color 0.3s ease;
-        }
+    .btn-info {
+      transition: transform 0.3s ease, background-color 0.3s ease;
+    }
 
-        .btn-info:hover {
-            transform: scale(1.05);
-            background-color: #0dcaf0;
-        }
+    .btn-info:hover {
+      transform: scale(1.05);
+      background-color: #0dcaf0;
+    }
 
-        .navbar {
-            background-color: #17a2b8 !important;
-        }
+    .navbar {
+      background-color: #17a2b8 !important;
+    }
 
-        .navbar a {
-            color: white !important;
-        }
+    .navbar a {
+      color: white !important;
+    }
 
-        .container-md {
-            margin-top: 80px;
-        }
+    .container-md {
+      margin-top: 80px;
+    }
 
-        .card {
-            transition: transform 0.3s ease;
-        }
+    .card {
+      transition: transform 0.3s ease;
+    }
 
-        .card:hover {
-            transform: scale(1.02);
-        }
+    .card:hover {
+      transform: scale(1.02);
+    }
 
-        .offcanvas {
-            background-color: #e3f7fb;
-        }
+    .offcanvas {
+      background-color: #e3f7fb;
+    }
 
-        .offcanvas-title {
-            color: #0d6efd;
-        }
+    .offcanvas-title {
+      color: #0d6efd;
+    }
 
-        .offcanvas-body ul li {
-            margin-bottom: 8px;
-            font-weight: 500;
-            color: #343a40;
-        }
+    .offcanvas-body ul li {
+      margin-bottom: 8px;
+      font-weight: 500;
+      color: #343a40;
+    }
 
 
 
-        .result-form-container {
+    .result-form-container {
       animation: fadeIn 0.6s ease-in-out;
       background-color: #eaf8f3;
       box-shadow: 0 8px 20px rgba(0, 0, 0, 0.1);
       border-radius: 15px;
       padding: 20px;
     }
-  
+
     @keyframes fadeIn {
       from {
         opacity: 0;
         transform: translateY(20px);
       }
+
       to {
         opacity: 1;
         transform: translateY(0);
       }
     }
-  
+
     .form-label {
       font-weight: 500;
-      font-size: 1rem; /* Reduced font size */
-      width: 30%; /* Ensures label takes up 30% of the space */
-      margin-bottom: 0.5rem; /* Reduced margin */
+      font-size: 1rem;
+      /* Reduced font size */
+      width: 30%;
+      /* Ensures label takes up 30% of the space */
+      margin-bottom: 0.5rem;
+      /* Reduced margin */
     }
-  
+
     .form-control {
-      font-size: 1rem; /* Reduced font size */
-      padding: 8px; /* Reduced padding */
+      font-size: 1rem;
+      /* Reduced font size */
+      padding: 8px;
+      /* Reduced padding */
       border-radius: 8px;
-      width: 70%; /* Ensures input takes up 70% of the space */
-      height: 35px; /* Reduced input height */
+      width: 70%;
+      /* Ensures input takes up 70% of the space */
+      height: 35px;
+      /* Reduced input height */
     }
-  
+
     .btn-save {
       transition: transform 0.3s ease, background-color 0.3s ease;
       border-radius: 25px;
-      padding: 10px 20px; /* Reduced button padding */
-      font-size: 1rem; /* Reduced button font size */
+      padding: 10px 20px;
+      /* Reduced button padding */
+      font-size: 1rem;
+      /* Reduced button font size */
     }
-  
+
     .btn-save:hover {
       transform: scale(1.05);
       background-color: #4caf50;
     }
-  
+
     .btn-save:focus {
       outline: none;
     }
-  
+
     .btn-save-success {
       background-color: #28a745;
       color: white;
     }
-  
+
     .btn-save-primary {
       background-color: #007bff;
       color: white;
     }
-  
+
     /* Responsive Design */
     @media (max-width: 768px) {
       .result-form-container {
@@ -147,91 +154,93 @@
         margin-top: 20px;
       }
     }
-  
+
     /* Input Styling */
     .form-control[readonly] {
       background-color: #f8f9fa;
       color: #495057;
     }
-  
+
     .container-sm {
       width: 60vw;
       margin-top: 100px;
     }
-  
+
     .form-row {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      margin-bottom: 0.8rem; /* Reduced bottom margin */
+      margin-bottom: 0.8rem;
+      /* Reduced bottom margin */
     }
-    </style>
+  </style>
 </head>
 
 <body>
 
-      <!-- Navbar -->
-      <nav class="navbar navbar-expand-lg fixed-top">
-        <div class="container-fluid">
-            <a class="navbar-brand" href="/examapp/user/{{ user.id }}">
-              Exam Online
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
-                <div class="navbar-nav w-100">
-                    <a class="nav-link ms-auto" href="/examapp/examresult/{{ user.id }}">
-                        <i class="bi bi-clipboard-data me-1"></i> Result
-                    </a>
-                    <button class="nav-link" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" style="color:white;">
-                        <i class="bi bi-person-circle me-1"></i> Account Details
-                    </button>
-                    <a class="nav-link" href="/examapp/home">
-                        <i class="bi bi-box-arrow-right me-1"></i> Logout
-                    </a>
-                </div>
-            </div>
+  <!-- Navbar -->
+  <nav class="navbar navbar-expand-lg fixed-top">
+    <div class="container-fluid">
+      <a class="navbar-brand" href="/examapp/user/{{ user.id }}">
+        Exam Online
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav w-100">
+          <a class="nav-link ms-auto" href="/examapp/examresult/{{ user.id }}">
+            <i class="bi bi-clipboard-data me-1"></i> Result
+          </a>
+          <button class="nav-link" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar"
+            style="color:white;">
+            <i class="bi bi-person-circle me-1"></i> Account Details
+          </button>
+          <a class="nav-link" href="/examapp/home">
+            <i class="bi bi-box-arrow-right me-1"></i> Logout
+          </a>
         </div>
-    </nav>
-
-    <!-- Offcanvas Sidebar -->
-    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar">
-        <div class="offcanvas-header">
-            <h5 class="offcanvas-title">
-                <i class="bi bi-person-circle me-1"></i> Account Details
-            </h5>
-            <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
-        </div>
-        <div class="offcanvas-body text-dark">
-            <ul class="navbar-nav">
-                <li id="user" hidden>{{ user.id }}</li>
-                <li class="mb-2">
-                    <strong><i class="bi bi-person-badge me-1"></i> {{ user.userid }}</strong>
-                </li>
-                <li><i class="bi bi-person-lines-fill me-1 text-muted"></i> Name: <span>{{ user.name }}</span></li>
-                <li><i class="bi bi-gender-ambiguous me-1 text-muted"></i> Gender: <span>{{ user.gender }}</span></li>
-                <li><i class="bi bi-calendar-event me-1 text-muted"></i> DOB: <span>{{ user.dob }}</span></li>
-                <li><i class="bi bi-envelope-at me-1 text-muted"></i> Email: <span>{{ user.email }}</span></li>
-                <li><i class="bi bi-telephone-forward me-1 text-muted"></i> Mobile: <span>{{ user.mobile_number }}</span></li>
-                <li><i class="bi bi-info-circle me-1 text-muted"></i> Status:
-                    {% if user.status %}
-                    <span class="text-success">Approved</span>
-                    {% else %}
-                    <span class="text-danger">Not Approved</span>
-                    {% endif %}
-                </li>
-                <li><a class="nav-link" href="/examapp/updateuser/{{ user.id }}">
-                    <i class="bi bi-pencil-square me-1"></i> Update Account</a>
-                </li>
-                <li><a class="nav-link" href="/examapp/deleteuser/{{ user.id }}">
-                    <i class="bi bi-trash3 me-1"></i> Delete Account</a>
-                </li>
-            </ul>
-        </div>
+      </div>
     </div>
+  </nav>
 
-<!-- 
+  <!-- Offcanvas Sidebar -->
+  <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar">
+    <div class="offcanvas-header">
+      <h5 class="offcanvas-title">
+        <i class="bi bi-person-circle me-1"></i> Account Details
+      </h5>
+      <button type="button" class="btn-close" data-bs-dismiss="offcanvas"></button>
+    </div>
+    <div class="offcanvas-body text-dark">
+      <ul class="navbar-nav">
+        <li id="user" hidden>{{ user.id }}</li>
+        <li class="mb-2">
+          <strong><i class="bi bi-person-badge me-1"></i> {{ user.userid }}</strong>
+        </li>
+        <li><i class="bi bi-person-lines-fill me-1 text-muted"></i> Name: <span>{{ user.name }}</span></li>
+        <li><i class="bi bi-gender-ambiguous me-1 text-muted"></i> Gender: <span>{{ user.gender }}</span></li>
+        <li><i class="bi bi-calendar-event me-1 text-muted"></i> DOB: <span>{{ user.dob }}</span></li>
+        <li><i class="bi bi-envelope-at me-1 text-muted"></i> Email: <span>{{ user.email }}</span></li>
+        <li><i class="bi bi-telephone-forward me-1 text-muted"></i> Mobile: <span>{{ user.mobile_number }}</span></li>
+        <li><i class="bi bi-info-circle me-1 text-muted"></i> Status:
+          {% if user.status %}
+          <span class="text-success">Approved</span>
+          {% else %}
+          <span class="text-danger">Not Approved</span>
+          {% endif %}
+        </li>
+        <li><a class="nav-link" href="/examapp/updateuser/{{ user.id }}">
+            <i class="bi bi-pencil-square me-1"></i> Update Account</a>
+        </li>
+        <li><a class="nav-link" href="/examapp/deleteuser/{{ user.id }}">
+            <i class="bi bi-trash3 me-1"></i> Delete Account</a>
+        </li>
+      </ul>
+    </div>
+  </div>
+
+  <!-- 
     {% if course %}
     <div class="container-sm bg-success bg-opacity-50 p-3 rounded" style="margin-top: 100px; width: 50vw;">
         <form method="post" action="/examapp/resultcourse/{{user.id}}">
@@ -308,97 +317,97 @@
 
  -->
 
-  
+
   <!-- Course Result Form -->
   {% if course %}
-    <div class="container-sm result-form-container bg-opacity-50 p-4 ">
-      <form method="post" action="/examapp/resultcourse/{{user.id}}">
-        {% csrf_token %}
-        <h4 class="text-center mb-4 text-primary">Course Results</h4>
-  
-        <div class="form-row">
-          <label for="course" class="form-label">Course:</label>
-          <input type="text" name="course" id="course" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="subjects" class="form-label">Subjects:</label>
-          <input type="text" name="subjects" id="subjects" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="totalmarks" class="form-label">Total Marks:</label>
-          <input type="number" name="totalmarks" id="totalmarks" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="questions" class="form-label">Total Questions:</label>
-          <input type="number" name="questions" id="questions" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="percentage" class="form-label">Percentage:</label>
-          <input type="number" name="percentage" id="percentage" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="result" class="form-label">Result:</label>
-          <input type="text" name="result" id="result" class="form-control" readonly>
-        </div>
-  
-        <div class="d-flex flex-row-reverse mt-4">
-          <button type="submit" class="btn btn-save btn-save-success">Save Result</button>
-        </div>
-      </form>
-    </div>
-  
-    <script src="{% static 'examapp/js/coursesubmit.js' %}"></script>
+  <div class="container-sm result-form-container bg-opacity-50 p-4 ">
+    <form method="post" action="/examapp/resultcourse/{{user.id}}">
+      {% csrf_token %}
+      <h4 class="text-center mb-4 text-primary">Course Results</h4>
+
+      <div class="form-row">
+        <label for="course" class="form-label">Course:</label>
+        <input type="text" name="course" id="course" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="subjects" class="form-label">Subjects:</label>
+        <input type="text" name="subjects" id="subjects" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="totalmarks" class="form-label">Total Marks:</label>
+        <input type="number" name="totalmarks" id="totalmarks" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="questions" class="form-label">Total Questions:</label>
+        <input type="number" name="questions" id="questions" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="percentage" class="form-label">Percentage:</label>
+        <input type="number" name="percentage" id="percentage" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="result" class="form-label">Result:</label>
+        <input type="text" name="result" id="result" class="form-control" readonly>
+      </div>
+
+      <div class="d-flex flex-row-reverse mt-4">
+        <button type="submit" class="btn btn-save btn-save-success">Save Result</button>
+      </div>
+    </form>
+  </div>
+
+  <script src="{% static 'examapp/js/coursesubmit.js' %}"></script>
   {% endif %}
-  
+
   <!-- Subject Result Form -->
   {% if subject %}
-    <div class="container-sm result-form-container p-4 ">
-      <form method="post" action="/examapp/resultsubject/{{user.id}}">
-        {% csrf_token %}
-        <h4 class="text-center mb-4 text-primary">Subject Results</h4>
-  
-        <div class="form-row">
-          <label for="subject" class="form-label">Subject:</label>
-          <input type="text" name="subject" id="subject" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="marks" class="form-label">Total Marks:</label>
-          <input type="number" name="marks" id="marks" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="questions" class="form-label">Total Questions:</label>
-          <input type="text" name="questions" id="questions" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="percentage" class="form-label">Percentage:</label>
-          <input type="number" name="percentage" id="percentage" class="form-control" readonly>
-        </div>
-  
-        <div class="form-row">
-          <label for="result" class="form-label">Result:</label>
-          <input type="text" name="result" id="result" class="form-control" readonly>
-        </div>
-  
-        <div class="d-flex flex-row-reverse mt-4">
-          <button type="submit" class="btn btn-save btn-save-success">Save Result</button>
-        </div>
-      </form>
-    </div>
-  
-    <script src="{% static 'examapp/js/subjectsubmit.js' %}"></script>
+  <div class="container-sm result-form-container p-4 ">
+    <form method="post" action="/examapp/resultsubject/{{user.id}}">
+      {% csrf_token %}
+      <h4 class="text-center mb-4 text-primary">Subject Results</h4>
+
+      <div class="form-row">
+        <label for="subject" class="form-label">Subject:</label>
+        <input type="text" name="subject" id="subject" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="marks" class="form-label">Total Marks:</label>
+        <input type="number" name="marks" id="marks" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="questions" class="form-label">Total Questions:</label>
+        <input type="text" name="questions" id="questions" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="percentage" class="form-label">Percentage:</label>
+        <input type="number" name="percentage" id="percentage" class="form-control" readonly>
+      </div>
+
+      <div class="form-row">
+        <label for="result" class="form-label">Result:</label>
+        <input type="text" name="result" id="result" class="form-control" readonly>
+      </div>
+
+      <div class="d-flex flex-row-reverse mt-4">
+        <button type="submit" class="btn btn-save btn-save-success">Save Result</button>
+      </div>
+    </form>
+  </div>
+
+  <script src="{% static 'examapp/js/subjectsubmit.js' %}"></script>
   {% endif %}
-  
 
 
-    <script src="{% static 'examapp/js/bootstrap.bundle.min.js' %}"></script>
+
+  <script src="{% static 'examapp/js/bootstrap.bundle.min.js' %}"></script>
 </body>
 
 </html>
