--- a/examapp/templates/subject.html
+++ b/examapp/templates/subject.html
@@ -15,7 +15,7 @@
 
     <!-- Bootstrap Icons -->
     <link href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css" rel="stylesheet" />
-    <link rel="stylesheet" href="{% static 'examapp/css/adminexam.css' %}">
+    <link rel="stylesheet" href="{% static 'examapp/css/onlineadmin.css' %}">
     <style>
         .btn-none {
             background: none;
