--- a/examapp/templates/examcourse.html
+++ b/examapp/templates/examcourse.html
@@ -123,8 +123,7 @@
                 <li><i class="bi bi-gender-ambiguous me-1 text-muted"></i> Gender: <span>{{ user.gender }}</span></li>
                 <li><i class="bi bi-calendar-event me-1 text-muted"></i> DOB: <span>{{ user.dob }}</span></li>
                 <li><i class="bi bi-envelope-at me-1 text-muted"></i> Email: <span>{{ user.email }}</span></li>
-                <li><i class="bi bi-telephone-forward me-1 text-muted"></i> Mobile: <span>{{ user.mobile_number
-                        }}</span></li>
+                <li><i class="bi bi-telephone-forward me-1 text-muted"></i> Mobile: <span>{{ user.mobile_number}}</span></li>
                 <li><i class="bi bi-info-circle me-1 text-muted"></i> Status:
                     {% if user.status %}
                     <span class="text-success">Approved</span>
